--- a/frontend_comisiones_v2/web/index.html
+++ b/frontend_comisiones_v2/web/index.html
@@ -29,7 +29,7 @@
   <!-- Favicon -->
   <link rel="icon" type="image/png" href="favicon.png"/>
 
-  <title>frontend_comisiones_v2</title>
+  <title>Calculadora de Comisiones</title>
   <link rel="manifest" href="manifest.json">
 </head>
 <body>
